# qhycfw3_usb

./: .gitignore  CMakeLists.txt  README.md  filterwheellist QHYCFW3.txt  qhycfw3_usb.ui
installer/: build.sh
installer/scripts/: postinstall
liscensedinterfaces/: cameradriverinterface.h  domedriverinterface.h  filterwheeldriverinterface.h  focuserdriverinterface.h  focusergotointerface2.h  mountdriverinterface.h  rotatordriverinterface.h  serialportparams2interface.h  x2guiinterface.h
liscensedinterfaces/focuser/: focusergotointerface2.h
liscensedinterfaces/mount/: openloopmoveinterface.h
src/: FilterWheel.cpp  FilterWheel.h  main.cpp  visibility.h
